manifest/crud-nestjs-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-nestjs
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: crud-nestjs
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-nestjs-deployment
  labels:
    app: crud-nestjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-nestjs
  template:
    metadata:
      labels:
        app: crud-nestjs
    spec:
      containers:
      - name: crud-nestjs
        image: anclarma/crud-nestjs:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - containerPort: 3000
